# Prosperity-Backtester

./: .fidelity_lock  Makefile  README.md  backtest.py  example_trader.py  pyproject.toml  requirements.txt  sweep.py
backtester/: __init__.py  data_loader.py  datamodel.py  matching_engine.py  metrics.py  reporter.py  round2.py  runner.py  sweeper.py
backtester/tests/: conftest.py
backtester/tests/fidelity/: test_matching_engine_fidelity.py  test_module_boundary.py  test_regression_snapshots.py  test_replay_equivalence.py  test_round2_maf.py
backtester/tests/fidelity/snapshots/: aggregate_limit_rejected.json  buy_sweeps_three_ask_levels.json  maker_buy_fills_via_market_trade.json  round2_boost_125_enables_extra_fill.json  round2_boost_150_enables_more_fills.json  round2_no_boost_identical_to_baseline.json  self_cross_rejected.json  short_walks_bid_ladder_down.json
backtester/tests/fixtures/: make_synthetic.py  prices_synthetic_day.csv  round2_config.yaml  round2_sweep_config.yaml  sweep_config.yaml  trades_synthetic_day.csv
backtester/tests/unit/: test_cli_smoke.py  test_data_loader.py  test_datamodel.py  test_metrics.py  test_reporter.py  test_round2.py  test_runner.py  test_sweeper.py
